Started implementing new list option but had some bugs with scrollbar appearing which cause me to make multiple changes to the code.

--- a/project_planning_new/src/App.css
+++ b/project_planning_new/src/App.css
@@ -1,3 +1,11 @@
 body {
     background-color:rgb(255, 255, 255)
-  }
+}
+.Root {
+}
+
+.Content {
+  display: flex;
+  overflow-x:auto; 
+  overflow-y: hidden;
+}
