--- a/project_planning_new/src/components/Topbar.css
+++ b/project_planning_new/src/components/Topbar.css
@@ -9,6 +9,7 @@
     height: 55px;
     background-color: rgb(255, 255, 255);
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    z-index: 1000;
 }
 
 .left-Topbar{
