--- a/project_planning_new/src/components/list.css
+++ b/project_planning_new/src/components/list.css
@@ -1,6 +1,7 @@
 body {
     padding-left: 300px; 
-  }
+}
+
 .list {
     background-color: #97f0ff;
     border-radius: 18px;
@@ -19,7 +20,6 @@ body {
     margin-bottom: 4px;
     justify-content: space-between;
 }
-
 .list-header h2 {
     font-family: sans-serif;
     font-size: 15px;
@@ -41,6 +41,20 @@ body {
     cursor: pointer;
     padding-right: 13px;
 }
+.NewList{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    background-color: #b5f4ff;
+    border-radius: 18px;
+    width: 270px;
+    height: 100px;
+    margin: 0 8px;
+    padding-left: 8px;
+    padding-bottom: 8px;
+    margin-top: 85px;
+}
+
 
 .add-card-btn {
     background-color: #97f0ff;
